firefox-trunk (95.0~a1~hg20211006r594982-0ubuntu1) UNRELEASED; urgency=medium

  * Make cargo 0.52 aka 1.51.0 sufficient
    - debian/patches/relax-cargo-dep.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Thu, 07 Oct 2021 08:36:35 +0200

firefox-trunk (94.0~a1~hg20211004r594164-0ubuntu1) impish; urgency=medium

  * Bump build-dep on rustc >= 1.53.0 and cargo >= 0.54
    - debian/control{,.in}
  * Revert failing "pip --check" addition
    - debian/patches/revert-pip-check.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Mon, 04 Oct 2021 13:57:48 +0200

firefox-trunk (93.0~a1~hg20210906r591057-0ubuntu1) impish; urgency=medium

  * Update patches
    - debian/patches/armhf-reduce-linker-memory-use.patch
    - debian/patches/ubuntu-ua-string-changes.patch
  * Use clang 13 if available
    - debian/control{,.in}
    - debian/build/rules.mk
  * Explicitly set MOZBUILD_STATE_PATH
    - debian/build/rules.mk

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Mon, 06 Sep 2021 10:04:03 +0200

firefox-trunk (92.0~a1~hg20210808r588154-0ubuntu1) impish; urgency=medium

  * Update cbindgen to 0.20.0
    - debian/build/create-tarball.py
  * Drop superfluous alternative for clang 8
    - debian/control{,.in}
    - debian/build/rules.mk
  * Update patches
    - debian/patches/armhf-do-not-build-qcms-with-neon.patch
    - debian/patches/armhf-reduce-linker-memory-use.patch
  * Remove patches that are no longer needed
    - debian/patches/armhf-disable-unaligned-fp-access-emulation.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sun, 08 Aug 2021 13:19:58 +0200

firefox-trunk (91.0~a1~hg20210712r585270-0ubuntu1) impish; urgency=medium

  * Drop upstreamed patches
    - debian/patches/sandbox-update-arm-syscall-numbers.patch
  * Update patches
    - debian/patches/fix-armhf-webrtc-build.patch
    - debian/patches/rust-drop-dll-checksums.patch
    - debian/patches/ubuntu-ua-string-changes.patch
  * Bump build-dep on rustc >= 1.51.0 and cargo >= 0.52
    - debian/control{,.in}
