@@ -75,6 +75,7 @@ ac_add_options --with-app-profile=@MOZ_APP_PROFILE@
 %%if DISTRIB == Ubuntu
 ac_add_options --with-ua-vendor=Ubuntu
 %%endif
+ac_add_options --without-wasm-sandboxed-libraries
 %%if MOZ_UPDATE_CHANNEL == nightly
 ac_add_options --enable-profiling
 %%endif
