@@ -9,8 +9,8 @@ Forwarded: not-needed
 --- a/config/makefiles/rust.mk
 +++ b/config/makefiles/rust.mk
 @@ -70,8 +70,10 @@ ifndef MOZ_DEBUG_RUST
- # gkrust_gtest. And not when doing cross-language LTO.
- ifndef MOZ_LTO_RUST_CROSS
+ # Never enable when sancov is enabled to work around https://github.com/rust-lang/rust/issues/90300.
+ ifndef rustflags_sancov
  ifeq (,$(findstring gkrust_gtest,$(RUST_LIBRARY_FILE)))
 +ifneq (,$(filter-out aarch64 arm x86,$(CPU_ARCH)))
  cargo_rustc_flags += -Clto
